--- a/canary.html
+++ b/canary.html
@@ -26,11 +26,16 @@
     <main>
         <h1>
             <!-- Bird name here -->
+            Canary
         </h1>
         <!-- Description of bird -->
+        <p>The domestic canary, often simply known as the canary, is a 
+            small songbird in the finch family originating from the Macaronesian Islands.</p>
         <div>
             <!-- Image of bird -->
+            <img src="assets/images/canary.jpg" alt="Image of a Canary.">
             <!-- Audio of bird -->
+            <audio controls src="assets/sounds/canary.mp3">Audio tag is not supported.</audio>
             <div>
                 <h4>Image credit: <a href="https://commons.wikimedia.org/wiki/File:Canary_(Serinus_canaria)_01.jpg">Wikimedia</a> Audio credit: <a href="http://soundbible.com/14-Canary-Singing.html">SoundBible</a></h4>
             </div>
